Fix layout for experience section on mobile devices

--- a/mediaquiries.css
+++ b/mediaquiries.css
@@ -88,5 +88,8 @@
     flex-direction: column;
   }
 
+  #experience .stacks-cont {
+    flex-direction: column;
+  }
 
 }
